# challenges-ms

./: .dockerignore  .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  evaluator.py  flake.nix  justfile
.github/workflows/: check.yml  docker.yml  ghcr_clean.yml  test.yml
challenges/: Cargo.toml
challenges/assets/evaluator/: lib.py  template.py
challenges/src/: main.rs
challenges/src/endpoints/: challenges.rs  coding_challenges.rs  course_tasks.rs  leaderboard.rs  matchings.rs  mod.rs  multiple_choice.rs  question.rs  skill_tasks.rs  subtasks.rs
challenges/src/endpoints/coding_challenges/: assets.rs  challenges.rs  judge.rs  mod.rs  submissions.rs
challenges/src/endpoints/subtasks/: bans.rs  config.rs  feedback.rs  mod.rs  reports.rs
challenges/src/schemas/: challenges.rs  coding_challenges.rs  course_tasks.rs  matchings.rs  mod.rs  multiple_choice.rs  question.rs  skill_tasks.rs  subtasks.rs
challenges/src/services/: course_tasks.rs  judge.rs  mod.rs  subtasks.rs  tasks.rs
challenges/src/services/leaderboard/: global.rs  language.rs  mod.rs  task.rs
client/: Cargo.toml
client/src/: challenges.rs  lib.rs
entity/: Cargo.toml
entity/src/: challenges_ban.rs  challenges_challenge_categories.rs  challenges_challenges.rs  challenges_coding_challenge_example.rs  challenges_coding_challenge_result.rs  challenges_coding_challenge_submissions.rs  challenges_coding_challenges.rs  challenges_course_tasks.rs  challenges_matching_attempts.rs  challenges_matchings.rs  challenges_multiple_choice_attemps.rs  challenges_multiple_choice_attempts.rs  challenges_multiple_choice_quizes.rs  challenges_question_attempts.rs  challenges_questions.rs  challenges_skill_tasks.rs  challenges_subtask_reports.rs  challenges_subtasks.rs  challenges_tasks.rs  challenges_unlocked_subtasks.rs  challenges_user_subtasks.rs  jobs_companies.rs  jobs_jobs.rs  jobs_skill_requirements.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs
jobs/: Cargo.toml
jobs/src/: config.rs  main.rs
jobs/src/endpoints/: companies.rs  jobs.rs  mod.rs
jobs/src/schemas/: companies.rs  jobs.rs  mod.rs
lib/: Cargo.toml
lib/src/: auth.rs  jwt.rs  lib.rs  patch_value.rs  redis.rs  types.rs
lib/src/config/: challenges.rs  jobs.rs  mod.rs
lib/src/services/: auth.rs  mod.rs  shop.rs  skills.rs
lib/tests/: config.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230204_171617_create_companies_table.rs  m20230204_171643_create_jobs_table.rs  m20230204_180119_create_skill_requirements_table.rs  m20230322_163425_challenges_init.rs  m20230326_074819_multiple_choice_attempts.rs  m20230330_174101_challenges_skills.rs  m20230505_153021_coding_challenges.rs  m20230522_183823_remove_examples.rs  m20230522_192000_add_cc_solution.rs  m20230525_065623_cc_number_of_tests.rs  m20230527_151432_cc_submissions.rs  m20230612_182959_new_course_tasks.rs  m20230618_144250_add_fee_to_subtasks.rs  m20230618_150706_add_unlocked_subtasks.rs  m20230619_084345_user_subtasks.rs  m20230620_082405_subtask_feedback.rs  m20230620_093716_reports.rs  m20230620_153019_dislike_reports.rs  m20230620_163944_ban.rs  m20230620_221620_pre_check_failed_verdict.rs  m20230621_072201_single_choice.rs  m20230621_074711_questions.rs  m20230621_120013_fix_foreign_keys.rs  m20230621_135204_questions_building_blocks.rs  m20230621_141228_matchings.rs  m20230707_200516_subtask_type.rs  m20230712_141047_ban_creator_reason.rs  m20230713_100102_delete_reports.rs  m20230719_174846_user_subtasks_last_attempt.rs  m20230815_162457_remove_subtask_fee.rs  m20230815_203544_remove_subtask_unlocked.rs  m20230816_173651_retire_subtasks.rs  m20231014_142202_category_creation_timestamp.rs  main.rs
schemas/: Cargo.toml
schemas/src/: lib.rs
schemas/src/challenges/: challenges.rs  coding_challenges.rs  course_tasks.rs  leaderboard.rs  matchings.rs  mod.rs  multiple_choice.rs  question.rs  subtasks.rs
