[workspace]
resolver = "2"
members = [
  "migration",
  "entity",
  "lib",
  "schemas",
  "client",
  "challenges",
]

[profile.release]
strip = true
lto = true
codegen-units = 1

[workspace.dependencies]
anyhow = { version = "1.0.74", default-features = false, features = ["std"] }
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
entity = { version = "0.1.0", path = "./entity" }
fnct = { version = "0.6.0", default-features = false, features = ["serde_json"] }
hmac = { version = "0.12.1", default-features = false }
itertools = { version = "0.11.0", default-features = false, features = ["use_std"] }
jwt = { version = "0.16.0", default-features = false }
lib = { version = "0.1.0", path = "./lib" }
paste = { version = "1.0.14", default-features = false }
poem = { version = "1.3.57", default-features = false, features = ["server"] }
poem-ext = { version = "0.9.2", default-features = false, features = ["sea-orm", "serde"] }
poem-openapi = { version = "3.0.1", default-features = false, features = ["swagger-ui", "redoc", "uuid", "chrono"] }
redis = { version = "0.23.2", default-features = false, features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "blocking", "json"] }
sandkasten-client = { version = "0.1.4", default-features = false, features = ["reqwest", "poem-openapi"] }
schemas = { version = "0.1.0", path = "./schemas" }
sea-orm = { version = "0.12.2", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "postgres-array"] }
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.104", default-features = false }
sha2 = { version = "0.10.7", default-features = false }
thiserror = { version = "1.0.45", default-features = false }
tokio = { version = "1.31.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi"] }
url = { version =  "2.4.0", default-features = false, features = ["serde"] }
uuid = { version = "1.4.1", default-features = false, features = ["v4", "fast-rng", "serde"] }
