[workspace]
resolver = "2"
members = [
  "migration",
  "entity",
  "lib",
  "schemas",
  "challenges",
]

[workspace.dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
config = { version = "0.13.4", default-features = false, features = ["toml"] }
entity = { version = "2.0.2", path = "./entity" }
fnct = { version = "0.6.2", default-features = false, features = ["serde_json"] }
hmac = { version = "0.12.1", default-features = false }
itertools = { version = "0.11.0", default-features = false, features = ["use_std"] }
jwt = { version = "0.16.0", default-features = false }
lib = { version = "2.0.2", path = "./lib" }
paste = { version = "1.0.14", default-features = false }
poem = { version = "1.3.59", default-features = false, features = ["server"] }
poem-ext = { version = "0.9.4", default-features = false, features = ["sea-orm", "serde"] }
poem-openapi = { version = "3.0.6", default-features = false, features = ["swagger-ui", "redoc", "uuid", "chrono"] }
redis = { version = "0.23.4", default-features = false, features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "blocking", "json"] }
sandkasten-client = { version = "0.1.7", default-features = false, features = ["reqwest", "poem-openapi"] }
schemas = { version = "2.0.2", path = "./schemas" }
sea-orm = { version = "0.12.10", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "postgres-array"] }
sentry = { version = "0.31.8", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "tracing"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
tokio = { version = "1.35.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter"] }
url = { version =  "2.5.0", default-features = false, features = ["serde"] }
uuid = { version = "1.6.1", default-features = false, features = ["v4", "fast-rng", "serde"] }
