[package]
name = "challenges"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
entity = { workspace = true }
fnct = { workspace = true }
itertools = { workspace = true }
lib = { workspace = true }
poem = { workspace = true }
poem-ext = { workspace = true }
poem-openapi = { workspace = true }
redis = { workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
