[package]
name = "challenges"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
entity = { workspace = true }
fnct = { workspace = true }
itertools = { workspace = true }
key-rwlock = { version = "0.1.0", default-features = false }
lib = { workspace = true }
poem = { workspace = true }
poem-ext = { workspace = true }
poem-openapi = { workspace = true }
redis = { workspace = true }
sandkasten-client = { version = "0.0.5", default-features = false, features = ["reqwest", "poem-openapi"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
