[package]
name = "challenges"
version = "2.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
entity = { workspace = true }
fnct = { workspace = true }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
itertools = { workspace = true }
key-rwlock = { version = "0.1.2", default-features = false }
lib = { workspace = true }
poem = { workspace = true }
poem-ext = { workspace = true }
poem-openapi = { workspace = true }
redis = { workspace = true }
sandkasten-client = { workspace = true }
schemas = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
