[package]
name = "client"
version = "2.0.0"
edition = "2021"
publish = false

[dependencies]
paste = { workspace = true }
reqwest = { workspace = true }
schemas = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
