[package]
name = "lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
config = { workspace = true }
hmac = { workspace = true }
jwt = { workspace = true }
poem = { workspace = true }
poem-ext= { workspace = true }
poem-openapi = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
