[package]
name = "lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
config = { workspace = true }
fnct = { workspace = true }
hmac = { workspace = true }
jwt = { workspace = true }
paste = { version = "1.0.13", default-features = false }
poem = { workspace = true }
poem-ext= { workspace = true }
poem-openapi = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
