[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lib = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { version = "0.11.3", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "cli" ] }
tokio = { workspace = true }
