[package]
name = "migration"
version = "2.0.2"
edition = "2021"
publish = false

[dependencies]
lib = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { version = "0.12.10", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "cli", "with-uuid", "with-chrono" ] }
tokio = { workspace = true }
