[package]
name = "migration"
version = "2.1.1"
edition = "2021"
publish = false

[dependencies]
lib = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { version = "0.12.15", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "cli", "with-uuid", "with-chrono" ] }
tokio = { workspace = true }
