[package]
name = "schemas"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
entity = { workspace = true }
poem-ext = { workspace = true }
poem-openapi = { workspace = true }
sandkasten-client = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
