[package]
name = "schemas"
version = "2.0.2"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
entity = { workspace = true }
lib = { workspace = true }
poem-ext = { workspace = true }
poem-openapi = { workspace = true }
sandkasten-client = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
